fix(demo): fix left sidebar is not fully visible on small screens
- Changed buttons for bootstrap versions to prevent height changes on small screens

Closes #3383

--- a/demo/src/assets/css/style.scss
+++ b/demo/src/assets/css/style.scss
@@ -223,10 +223,14 @@ a:hover {
     padding: 15px 19px 10px 20px;
     display: flex;
     flex-flow: row wrap;
+    align-items: center;
     border-bottom: 1px solid #dadada;
 
+    span {
+      margin-right: 4px;
+    }
+
     .btn {
-      margin-bottom: 5px;
       cursor: pointer;
       text-align: center;
       white-space: nowrap;
@@ -240,11 +244,13 @@ a:hover {
       padding: 6px 8px;
       font-size: 0.8125rem;
       line-height: 1.25;
-      border-radius: .25rem;
       transition: all .15s ease-in-out;
 
-      &:first-child {
-        margin-right: 6px;
+      &:first-of-type {
+        border-radius: .25rem 0 0 .25rem;
+      }
+      &:last-of-type {
+        border-radius: 0 .25rem .25rem 0;
       }
 
       &.selected {
